2754 [MKV Info]             switched to the JSON format as the old switch is deprecated (requires mkvmerge 9.7+) 
2753 [Chapter]              improved chapter handling
                            all MediaInfo supported files and TXT/XML files can be used as chapter files
                            !!! existing jobs have to be recreated as otherwise the chapter information will not be added !!!
     [Muxer]                use chapter information from the input video file if available
     [Muxer] + [OneClick]   disable/enable the chapter selection box based upon the selected container and device type
2752 [MKV Muxer]            ignore invalid subtitle files
2751 [HD Streams Extractor] improved handling of audio tracks with unknown parameters
2750 [Worker]               fixed rare invisible progress window (regression of 2743)
2749 [Update]               fixed a rare crash when a restart is required and MeGUI is already closed
2748 [HD Streams Extractor] added detection of "core/embedded" tracks
                            removed the DTSHD "extract as" option
                            added the DTS_CORE "extract as" option
                            added settings menu:
                            - added option to select by default the (non-)HD tracks (defaults to non-HD)
                            - moved the language track selection option from the global settings into the new menu
                            - added settings to inlcude the encoding and/or all demuxer "extract as" options
                              AAC encoding is only available if neroaacenc.exe is found in the eac3to directory
2747 [Worker]               improved handling of multiple worker instances. part II
2746 [Worker]               improved handling of multiple worker instances
2745 [Main]                 added option to extend logging
2744 [Worker]               improved child process priority handling. part II
2743 [Worker]               improved child process priority handling